# rosarito-model_EPANET

./: CLAUDE.md  ROSARITO_Project_Instructions.md  execution_task.md  main.py  pyproject.toml
.claude/agents/: epanet-modeler.md  hydraulic-engineer.md  python-developer.md  test-validator.md
data/: riko_cylinder_e_dn1800.csv  ruhrpumpen_35wx_characteristics.md
docs/: EPANET-control.md  ISA-75.01.01-2012-formulas.md  ISA-75.01.01-2012.md  Pump + Control Valve Strategies.md  control-valve-sizing-and-pump-strategy.md
inp_files/: ROSARITO_EPANET_Rev0.inp  ROSARITO_EPANET_Rev1.inp  ROSARITO_EPANET_Rev2.inp  ROSARITO_EPANET_Rev3.inp
reports/: report.qmd  scenarios_report.md  scenarios_report.tex
reports/_extensions/engineering-report/: _extension.yml  typst-show.typ  typst-template.typ
rosarito/: __init__.py  constants.py  energy.py  eps_utils.py  model.py  optimization.py  plotting.py  report.py  reporting.py  scenarios.py  tables.py  validation.py
tests/: test_core.py  test_optimization.py
