[project]
name = "rosarito-model-epanet"
version = "0.1.0"
description = "Rosarito desalination plant seawater intake EPANET hydraulic model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["epyt", "pandas", "matplotlib", "tabulate", "ipykernel"]

[tool.setuptools]
packages = ["rosarito"]
